# sci_rag

./: .gitignore  PROMPT_CONSTRUCAO_NEXIRY_RAG_API.md  PROMPT_CONSTRUCAO_SCI_RAG_API.md  README.md  RELATORIO_EXECUCAO_NEXIRY_RAG_API.md  RELATORIO_EXECUCAO_SCI_RAG_API.md
sci-rag-api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml
sci-rag-api/app/: __init__.py  config.py  dependencies.py  main.py
sci-rag-api/app/api/v1/: feedback.py  health.py  query.py  router.py  stats.py
sci-rag-api/app/core/: __init__.py  cache.py  logging.py  rate_limit.py  security.py  time.py  webhooks.py
sci-rag-api/app/ingestion/: __init__.py  attachment_reader.py  chunker.py  pdf_extractor.py  pipeline.py  storage_client.py  vectorizer.py  vision_describer.py
sci-rag-api/app/models/: __init__.py  api_key.py  base.py  feedback.py  image_asset.py  ingestion_job.py  query_log.py
sci-rag-api/app/rag/: __init__.py  embeddings.py  engine.py  flagembedding_compat.py  generation.py  guardrails.py  llm_clients.py  query_rewriter.py  reranker.py  retrieval.py
sci-rag-api/app/schemas/: __init__.py  chunk.py  common.py  feedback.py  ingest.py  knowledge.py  query.py
sci-rag-api/app/storage/: __init__.py  object_storage.py  postgres.py  qdrant_client.py  r2_client.py  redis_client.py
sci-rag-api/app/tasks/: __init__.py  celery_app.py  ingestion_tasks.py  webhook_tasks.py
sci-rag-api/app/web/: admin.html  chat.html  ensinar.html
sci-rag-api/docs/: api.md  integration-nexiry.md  integration-sci.md  postman_collection.json  webhooks.md
sci-rag-api/migrations/: 001_initial.sql
sci-rag-api/ops/: nginx.conf  prometheus.yml
sci-rag-api/ops/grafana/: dashboard-provider.yml  dashboard.json
sci-rag-api/scripts/: benchmark.py  generate_api_key.py  ingest_sci_faq_jsonl.py  ingest_sci_images.py  reindex_all.py  seed_demo_chunks.py  seed_initial_pdf.py  test_attachment.py  test_followup.py  test_vision.py
sci-rag-api/tests/: gabarito.json
sci-rag-api/tests/e2e/: test_benchmark_cli.py
sci-rag-api/tests/integration/: test_live_api.py
sci-rag-api/tests/unit/: test_cache.py  test_chunker.py  test_guardrails.py  test_query_rewriter.py  test_schemas.py  test_security.py  test_webhooks.py
(+31 files in other folders)
