[project]
name = "nexiry-rag-api"
version = "0.1.0"
description = "RAG API standalone para SCI Contabil - FAQ search, hybrid retrieval, transbordo seguro"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "Nexiry" }]

dependencies = [
    "fastapi[standard]==0.115.0",
    "uvicorn[standard]==0.32.0",
    "gunicorn==23.0.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "qdrant-client[fastembed]==1.12.0",
    "redis[hiredis]==5.2.0",
    "boto3==1.35.36",
    "aioboto3==13.2.0",
    "FlagEmbedding==1.3.4",
    "torch==2.3.1",
    "transformers==4.44.2",
    "sentence-transformers==3.3.0",
    "docling==2.8.0",
    "pymupdf==1.24.13",
    "pillow==10.4.0",
    "pytesseract==0.3.13",
    "anthropic==0.39.0",
    "openai==1.55.0",
    "celery[redis]==5.4.0",
    "structlog==24.4.0",
    "prometheus-client==0.21.0",
    "passlib[bcrypt]==1.7.4",
    "slowapi==0.1.9",
    "packaging==24.1",
    "httpx==0.27.0",
    "tenacity==9.0.0",
    "python-multipart==0.0.12",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    "unidecode==1.3.8",
    "orjson==3.10.10",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.0",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "ruff==0.7.0",
    "mypy==1.13.0",
    "respx==0.21.1",
    "freezegun==1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
markers = [
    "integration: integration tests requiring external services",
    "e2e: end-to-end tests requiring full stack",
    "slow: slow tests",
]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
